@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Werewolf: Fixed an annoyance in VOTES.
     * Werewolf: Fixed another round of bugs.
     * Werewolf: Fixed a grammatical error. Thanks TAD!
     * Werewolf: Fixed a bug that occasionally caused a person to get wolf
